--- a/data/chips/HPM64A0.yaml
+++ b/data/chips/HPM64A0.yaml
@@ -2,12 +2,11 @@ name: HPM64A0
 family: HPM6400 Series
 sub_family: HPM6400, Automotive
 packages:
-  # A- -40- 105°C，AEC-Q100 G2
   - name: HPM64A0xANx
-    package: BGA196-P0.65-10x10
+    package: BGA196
     pins: 196
   - name: HPM64A0xVMx
-    package: BGA289-P0.8-14x14
+    package: BGA289
     pins: 289
 memory:
   - address: 0x00000000
