refactor: update chiptool

--- a/hpm-metapac-gen/Cargo.toml
+++ b/hpm-metapac-gen/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 regex = "1.7.1"
-chiptool = { git = "https://github.com/ch32-rs/chiptool", rev = "305bd6ee3e57009ae93be2c81d6e94b9896a03b1" }
+chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "c2a491c76a68e6bf842b3767a0d9631292591b1b" }
 serde = { version = "1.0.157", features = ["derive"] }
 serde_json = "1.0.94"
 proc-macro2 = "1.0.52"
