--- a/hpm-data-gen/Cargo.toml
+++ b/hpm-data-gen/Cargo.toml
@@ -16,8 +16,8 @@ num = "0.4.0"
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 regex = "1.7.1"
 serde = { version = "1.0.157", features = ["derive"] }
-serde_yaml = "0.9.19"
-chiptool = { git = "https://github.com/ch32-rs/chiptool", rev = "1c198ae678ebd426751513f0deab6fbd6f8b8211" }
+serde_yaml = "=0.9.34-deprecated"
+chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "c2a491c76a68e6bf842b3767a0d9631292591b1b" }
 serde_json = "1.0.94"
 rayon = { version = "1.7.0", optional = true }
 hpm-data-serde = { version = "0.1.0", path = "../hpm-data-serde" }
