--- a/hpm-data-serde/Cargo.toml
+++ b/hpm-data-serde/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.195", features = ["derive"] }
-serde_yaml = "0.9.30"
+serde_yaml = "=0.9.34-deprecated"
