--- a/hpm-metapac-gen/res/Cargo.toml
+++ b/hpm-metapac-gen/res/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hpm-metapac"
-version = "0.0.5"
+version = "0.1.0"
 edition = "2024"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/hpmicro/hpm-data"
@@ -22,7 +22,7 @@ targets = []
 
 [dependencies]
 riscv = "0.15.0"
-vcell = "0.1"
+riscv-rt = { version = "0.16.0", optional = true }
 
 [features]
 default = ["pac"]
@@ -36,7 +36,9 @@ pac = []
 # metadata for the currently selected chip.
 metadata = []
 
-rt = []
+rt = ["dep:riscv-rt"]
 memory-x = []
+
+defmt = []
 
 # Chip-selection features (filled by script)
